--- a/temoignages.html
+++ b/temoignages.html
@@ -113,9 +113,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="enseignements.html">Enseignements</a></li>
-            <li><a href="temoignages.html" class="active">Témoignages</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="coaching.html">Coaching Spirituel</a></li>
+            <li><a href="ressources.html">Ressources</a></li>
+            <li><a href="temoignages.html">Témoignages</a></li>
         </ul>
     </nav>
 </header>
