--- a/temoignages.html
+++ b/temoignages.html
@@ -179,8 +179,9 @@
       <div class="row">
         <input type="email" id="email" name="email" placeholder="(optionnel) ton email si tu souhaites être contacté" />
       </div>
-
-      <button type="submit" id="submit-btn">Envoyer</button>
+      
+      <butt<label for="fichier">Fichier audio / vidéo / image (max 5 Mo) :</label>
+      <input type="file" id="fichier" name="fichier" accept=".mp3,.mp4,.wav,.jpg,.jpeg,.png">on type="submit" id="submit-btn">Envoyer</button>
 
       <p id="form-message">Merci — ton témoignage a bien été envoyé. Nous le publierons après vérification.</p>
     </form>
