--- a/temoignages.html
+++ b/temoignages.html
@@ -179,9 +179,11 @@
       <div class="row">
         <input type="email" id="email" name="email" placeholder="(optionnel) ton email si tu souhaites être contacté" />
       </div>
-      
+
+      <div class="row">
       <label for="fichier">Fichier audio / vidéo / image (max 5 Mo) :</label>
       <input type="file" id="fichier" name="fichier" accept=".mp3,.mp4,.wav,.jpg,.jpeg,.png">
+      </div>
       
       <button type="submit" id="submit-btn">Envoyer</button>
 
