--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
+<header style="position: relative; text-align: center; margin-bottom: 50px;">
+  <img src="logo.png" alt="Logo Coeur Ouvert" style="height: 60px; position: absolute; top: 10px; left: 20px;" />
+  <h1 style="font-family: 'Montserrat', sans-serif; color: var(--blue-main); font-size: 3em; margin: 0 0 10px;">
+    Coeur Ouvert
+  </h1>
+  <p class="slogan" style="font-style: italic; font-size: 1.2em; color: var(--accent-pastel); margin: 0 0 20px;">
+    Espoir, écoute et lumière pour avancer chaque jour.
+  </p>
+  <div id="daily-verse" style="font-style: italic; color: var(--blue-main); font-weight: 600; background: var(--blue-pastel); padding: 15px; border-radius: 8px; max-width: 500px; margin: 0 auto;">
+    Chargement du verset...
+  </div>
+  <img src="header-bg.jpg" alt="" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0.1; z-index: -1;" />
+</header>
+  
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
