--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Coeur Ouvert</title>
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Nunito&display=swap" rel="stylesheet" />
-
   <style>
     :root {
       --blue-main: #2a6ebb;
@@ -17,23 +15,18 @@
       --accent-pastel: #a3c1d1;
       --gold-accent: #f5a623;
     }
-
-    /* Reset basique */
+    /* Reset */
     * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+      margin: 0; padding: 0; box-sizing: border-box;
     }
-
     body {
       font-family: 'Nunito', sans-serif;
-      background-color: var(--gray-light);
+      background: var(--gray-light);
       color: var(--gray-medium);
       max-width: 700px;
       margin: 0 auto;
       padding: 30px 20px;
     }
-
     nav {
       background-color: var(--blue-main);
       padding: 12px 20px;
@@ -41,14 +34,12 @@
       margin-bottom: 40px;
       box-shadow: 0 3px 6px rgba(42,110,187,0.3);
     }
-
     .menu {
       list-style: none;
       display: flex;
       justify-content: center;
       gap: 40px;
     }
-
     .menu li a {
       color: white;
       font-weight: 700;
@@ -57,13 +48,11 @@
       font-size: 1.1em;
       transition: color 0.3s ease;
     }
-
     .menu li a:hover,
     .menu li a:focus {
       color: var(--accent-pastel);
       outline: none;
     }
-
     header {
       position: relative;
       text-align: center;
@@ -74,14 +63,12 @@
       box-shadow: 0 0 15px rgba(42,110,187,0.15);
       overflow: hidden;
     }
-
     header img.logo {
       height: 60px;
       position: absolute;
       top: 20px;
       left: 20px;
     }
-
     header h1 {
       font-family: 'Montserrat', sans-serif;
       color: var(--blue-main);
@@ -89,14 +76,12 @@
       letter-spacing: 2px;
       margin-bottom: 10px;
     }
-
     header p.slogan {
       font-style: italic;
       font-size: 1.2em;
       color: var(--accent-pastel);
       margin-bottom: 25px;
     }
-
     #daily-verse {
       font-style: italic;
       color: var(--blue-main);
@@ -108,20 +93,16 @@
       margin: 0 auto;
       box-shadow: 0 0 10px rgba(42,110,187,0.1);
     }
-
     header img.bg {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       object-fit: cover;
       opacity: 0.08;
       z-index: -1;
       user-select: none;
       pointer-events: none;
     }
-
     main {
       background: white;
       padding: 30px 25px;
@@ -129,20 +110,17 @@
       box-shadow: 0 0 15px rgba(42,110,187,0.1);
       margin-bottom: 50px;
     }
-
     main h2 {
       color: var(--blue-main);
       font-family: 'Montserrat', sans-serif;
       margin-bottom: 15px;
       font-size: 2em;
     }
-
     main p {
       font-size: 1.1em;
       line-height: 1.6;
       margin-bottom: 20px;
     }
-
     .btn-primary {
       display: inline-block;
       background-color: var(--gold-accent);
@@ -154,38 +132,30 @@
       font-family: 'Montserrat', sans-serif;
       transition: background-color 0.3s ease;
     }
-
     .btn-primary:hover {
       background-color: #d18b1f;
     }
-
     footer {
       text-align: center;
       font-size: 0.9em;
       color: var(--gray-medium);
       margin-bottom: 20px;
     }
-
     footer a {
       color: var(--blue-main);
       text-decoration: none;
     }
-
     footer a:hover {
       text-decoration: underline;
     }
-
-    /* Responsive */
     @media (max-width: 480px) {
       body {
         padding: 20px 15px;
         max-width: 100%;
       }
-
       header h1 {
         font-size: 2.2em;
       }
-
       main h2 {
         font-size: 1.6em;
       }
@@ -204,6 +174,7 @@
   </nav>
 
   <header>
+    <!-- Pour intégrer ton logo, place le fichier logo.png dans le même dossier que index.html -->
     <img src="logo.png" alt="Logo Coeur Ouvert" class="logo" />
     <h1>Coeur Ouvert</h1>
     <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
