--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
   <header>
     <!-- Pour intégrer ton logo, place le fichier logo.png dans le même dossier que index.html -->
-    <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/coeur-ouvert/images/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
+    <img src="https://github.com/allanbavajee/coeur-ouvert/blob/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
     <h1>Coeur Ouvert</h1>
     <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
     <div id="daily-verse">Chargement du verset...</div>
