--- a/index.html
+++ b/index.html
@@ -1,166 +1,185 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Coeur Ouvert</title>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Nunito&display=swap" rel="stylesheet" />
-  <style>
-    :root {
-      --blue-main: #2a6ebb;
-      --blue-pastel: #d0e6ff;
-      --gray-medium: #6b7c8a;
-      --gray-light: #f0f4f8;
-      --accent-pastel: #a3c1d1;
-      --gold-accent: #f5a623;
-    }
-    /* Reset */
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-    }
-    body {
-      font-family: 'Nunito', sans-serif;
-      background: var(--gray-light);
-      color: var(--gray-medium);
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 30px 20px;
-    }
-    nav {
-      background-color: var(--blue-main);
-      padding: 12px 20px;
-      border-radius: 6px;
-      margin-bottom: 40px;
-      box-shadow: 0 3px 6px rgba(42,110,187,0.3);
-    }
-    .menu {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-    }
-    .menu li a {
-      color: white;
-      font-weight: 700;
-      text-decoration: none;
-      font-family: 'Montserrat', sans-serif;
-      font-size: 1.1em;
-      transition: color 0.3s ease;
-    }
-    .menu li a:hover,
-    .menu li a:focus {
-      color: var(--accent-pastel);
-      outline: none;
-    }
-    header {
-      position: relative;
-      text-align: center;
-      margin-bottom: 50px;
-      padding: 40px 20px 60px;
-      border-radius: 10px;
-      background-color: white;
-      box-shadow: 0 0 15px rgba(42,110,187,0.15);
-      overflow: hidden;
-    }
-    header img.logo {
-      height: 60px;
-      position: absolute;
-      top: 20px;
-      left: 20px;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Coeur Ouvert</title>
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Nunito&display=swap" rel="stylesheet" />
+<style>
+  :root {
+    --blue-main: #2a6ebb;
+    --blue-pastel: #d0e6ff;
+    --gray-medium: #6b7c8a;
+    --gray-light: #f0f4f8;
+    --accent-pastel: #a3c1d1;
+    --gold-accent: #f5a623;
+  }
+  * {
+    margin: 0; padding: 0; box-sizing: border-box;
+  }
+  body {
+    font-family: 'Nunito', sans-serif;
+    background: var(--gray-light);
+    color: var(--gray-medium);
+    line-height: 1.6;
+  }
+  nav {
+    position: fixed;
+    width: 100%;
+    background: rgba(42, 110, 187, 0.85);
+    display: flex;
+    justify-content: center;
+    padding: 15px 0;
+    z-index: 999;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  }
+  .menu {
+    list-style: none;
+    display: flex;
+    gap: 40px;
+  }
+  .menu li a {
+    color: white;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1em;
+    text-decoration: none;
+    transition: color 0.3s ease;
+  }
+  .menu li a:hover,
+  .menu li a:focus {
+    color: var(--accent-pastel);
+    outline: none;
+  }
+  header {
+    height: 100vh;
+    background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    padding: 0 20px;
+    position: relative;
+  }
+  header::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(42,110,187,0.65);
+    z-index: 0;
+  }
+  header img.logo {
+    position: fixed;
+    top: 15px;
+    left: 20px;
+    height: 50px;
+    z-index: 10;
+  }
+  header h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 4rem;
+    letter-spacing: 4px;
+    font-weight: 800;
+    z-index: 10;
+  }
+  header p.slogan {
+    font-style: italic;
+    font-size: 1.5rem;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    z-index: 10;
+  }
+  #daily-verse {
+    font-style: italic;
+    font-weight: 600;
+    font-size: 1.2rem;
+    background: rgba(255,255,255,0.25);
+    padding: 20px 30px;
+    border-radius: 25px;
+    max-width: 600px;
+    z-index: 10;
+  }
+  main {
+    padding: 80px 20px 60px;
+    max-width: 900px;
+    margin: 0 auto;
+    background: white;
+    border-radius: 15px;
+    box-shadow: 0 10px 30px rgba(42,110,187,0.1);
+    margin-top: -60px;
+    position: relative;
+    z-index: 5;
+  }
+  main h2 {
+    color: var(--blue-main);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  main p {
+    font-size: 1.15rem;
+    color: var(--gray-medium);
+    margin-bottom: 25px;
+    line-height: 1.7;
+  }
+  .btn-primary {
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
+    background-color: var(--gold-accent);
+    color: white;
+    font-weight: 700;
+    padding: 15px 40px;
+    border-radius: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+    text-decoration: none;
+    box-shadow: 0 6px 15px rgba(245,166,35,0.6);
+    transition: background-color 0.3s ease;
+  }
+  .btn-primary:hover {
+    background-color: #d18b1f;
+  }
+  footer {
+    text-align: center;
+    padding: 20px 0;
+    color: var(--gray-medium);
+    font-size: 0.9rem;
+  }
+  footer a {
+    color: var(--blue-main);
+    text-decoration: none;
+  }
+  footer a:hover {
+    text-decoration: underline;
+  }
+  @media (max-width: 480px) {
     header h1 {
-      font-family: 'Montserrat', sans-serif;
-      color: var(--blue-main);
-      font-size: 3em;
-      letter-spacing: 2px;
-      margin-bottom: 10px;
+      font-size: 2.8rem;
     }
     header p.slogan {
-      font-style: italic;
-      font-size: 1.2em;
-      color: var(--accent-pastel);
-      margin-bottom: 25px;
-    }
-    #daily-verse {
-      font-style: italic;
-      color: var(--blue-main);
-      font-weight: 600;
-      background: var(--blue-pastel);
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 600px;
-      margin: 0 auto;
-      box-shadow: 0 0 10px rgba(42,110,187,0.1);
-    }
-    header img.bg {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      object-fit: cover;
-      opacity: 0.08;
-      z-index: -1;
-      user-select: none;
-      pointer-events: none;
+      font-size: 1.1rem;
     }
     main {
-      background: white;
-      padding: 30px 25px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(42,110,187,0.1);
-      margin-bottom: 50px;
+      margin-top: -40px;
+      padding: 50px 15px 40px;
     }
     main h2 {
-      color: var(--blue-main);
-      font-family: 'Montserrat', sans-serif;
-      margin-bottom: 15px;
-      font-size: 2em;
+      font-size: 1.8rem;
     }
     main p {
-      font-size: 1.1em;
-      line-height: 1.6;
-      margin-bottom: 20px;
+      font-size: 1rem;
     }
     .btn-primary {
-      display: inline-block;
-      background-color: var(--gold-accent);
-      color: white;
-      font-weight: 700;
+      font-size: 1rem;
       padding: 12px 30px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-family: 'Montserrat', sans-serif;
-      transition: background-color 0.3s ease;
     }
-    .btn-primary:hover {
-      background-color: #d18b1f;
-    }
-    footer {
-      text-align: center;
-      font-size: 0.9em;
-      color: var(--gray-medium);
-      margin-bottom: 20px;
-    }
-    footer a {
-      color: var(--blue-main);
-      text-decoration: none;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
-    @media (max-width: 480px) {
-      body {
-        padding: 20px 15px;
-        max-width: 100%;
-      }
-      header h1 {
-        font-size: 2.2em;
-      }
-      main h2 {
-        font-size: 1.6em;
-      }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
 
@@ -174,12 +193,10 @@
   </nav>
 
   <header>
-    <!-- Pour intégrer ton logo, place le fichier logo.png dans le même dossier que index.html -->
     <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
     <h1>Coeur Ouvert</h1>
     <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
     <div id="daily-verse">Chargement du verset...</div>
-    <img src="header-bg.jpg" alt="" class="bg" />
   </header>
 
   <main>
