--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <style>
   :root {
     --blue-main: #2a6ebb;
-    --blue-pastel: #d0e6ff;
     --gray-medium: #6b7c8a;
     --gray-light: #f0f4f8;
     --accent-pastel: #a3c1d1;
@@ -20,23 +19,51 @@
   }
   body {
     font-family: 'Nunito', sans-serif;
-    background: var(--gray-light);
+    background: white;
     color: var(--gray-medium);
     line-height: 1.6;
   }
-  nav {
-    position: fixed;
-    width: 100%;
-    background: rgba(42, 110, 187, 0.85);
+  header {
     display: flex;
-    justify-content: center;
-    padding: 15px 0;
-    z-index: 999;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    align-items: center;
+    justify-content: space-between;
+    max-width: 900px;
+    margin: 20px auto 10px;
+    padding: 0 20px;
+  }
+  header .branding {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+  header img.logo {
+    height: 50px;
+  }
+  header h1 {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--blue-main);
+    font-size: 2.8rem;
+    font-weight: 800;
+    letter-spacing: 2px;
+  }
+  header p.slogan {
+    font-style: italic;
+    color: var(--accent-pastel);
+    font-size: 1.1rem;
+    margin-left: 10px;
+  }
+  nav {
+    background: var(--blue-main);
+    max-width: 900px;
+    margin: 0 auto 40px;
+    padding: 12px 0;
+    border-radius: 8px;
+    box-shadow: 0 3px 6px rgba(42,110,187,0.3);
   }
   .menu {
     list-style: none;
     display: flex;
+    justify-content: center;
     gap: 40px;
   }
   .menu li a {
@@ -52,66 +79,29 @@
     color: var(--accent-pastel);
     outline: none;
   }
-  header {
-    height: 100vh;
-    background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: white;
-    padding: 0 20px;
-    position: relative;
-  }
-  header::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: rgba(42,110,187,0.65);
-    z-index: 0;
-  }
-  header img.logo {
-    position: fixed;
-    top: 15px;
-    left: 20px;
-    height: 50px;
-    z-index: 10;
-  }
-  header h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 4rem;
-    letter-spacing: 4px;
-    font-weight: 800;
-    z-index: 10;
-  }
-  header p.slogan {
-    font-style: italic;
-    font-size: 1.5rem;
-    margin-top: 15px;
-    margin-bottom: 30px;
-    z-index: 10;
-  }
   #daily-verse {
     font-style: italic;
     font-weight: 600;
     font-size: 1.2rem;
-    background: rgba(255,255,255,0.25);
+    background: var(--blue-main);
+    color: white;
     padding: 20px 30px;
     border-radius: 25px;
-    max-width: 600px;
-    z-index: 10;
+    max-width: 700px;
+    margin: 0 auto 50px;
+    text-align: center;
+    box-shadow: 0 6px 15px rgba(42,110,187,0.3);
   }
   main {
-    padding: 80px 20px 60px;
+    padding: 0 20px 60px;
     max-width: 900px;
     margin: 0 auto;
-    background: white;
+  }
+  main section {
+    background: var(--gray-light);
+    padding: 40px 30px;
     border-radius: 15px;
     box-shadow: 0 10px 30px rgba(42,110,187,0.1);
-    margin-top: -60px;
-    position: relative;
-    z-index: 5;
   }
   main h2 {
     color: var(--blue-main);
@@ -125,6 +115,7 @@
     color: var(--gray-medium);
     margin-bottom: 25px;
     line-height: 1.7;
+    text-align: center;
   }
   .btn-primary {
     display: block;
@@ -159,14 +150,11 @@
   }
   @media (max-width: 480px) {
     header h1 {
-      font-size: 2.8rem;
+      font-size: 2rem;
     }
     header p.slogan {
-      font-size: 1.1rem;
-    }
-    main {
-      margin-top: -40px;
-      padding: 50px 15px 40px;
+      font-size: 1rem;
+      margin-left: 5px;
     }
     main h2 {
       font-size: 1.8rem;
@@ -183,6 +171,16 @@
 </head>
 <body>
 
+  <header>
+    <div class="branding">
+      <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
+      <div>
+        <h1>Coeur Ouvert</h1>
+        <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
+      </div>
+    </div>
+  </header>
+
   <nav>
     <ul class="menu">
       <li><a href="index.html">Accueil</a></li>
@@ -192,12 +190,7 @@
     </ul>
   </nav>
 
-  <header>
-    <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
-    <h1>Coeur Ouvert</h1>
-    <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
-    <div id="daily-verse">Chargement du verset...</div>
-  </header>
+  <div id="daily-verse">Chargement du verset...</div>
 
   <main>
     <section>
