--- a/index.html
+++ b/index.html
@@ -53,12 +53,9 @@
     margin-left: 10px;
   }
   nav {
-    background: var(--blue-main);
     max-width: 900px;
     margin: 0 auto 40px;
-    padding: 12px 0;
-    border-radius: 8px;
-    box-shadow: 0 3px 6px rgba(42,110,187,0.3);
+    padding: 0 20px;
   }
   .menu {
     list-style: none;
@@ -67,7 +64,7 @@
     gap: 40px;
   }
   .menu li a {
-    color: white;
+    color: var(--blue-main);
     font-weight: 700;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.1em;
@@ -76,7 +73,7 @@
   }
   .menu li a:hover,
   .menu li a:focus {
-    color: var(--accent-pastel);
+    color: var(--gold-accent);
     outline: none;
   }
   #daily-verse {
@@ -190,52 +187,4 @@
     </ul>
   </nav>
 
-  <div id="daily-verse">Chargement du verset...</div>
-
-  <main>
-    <section>
-      <h2>Notre mission</h2>
-      <p>
-        Coeur Ouvert est une plateforme chrétienne dédiée à l’encouragement spirituel 
-        et au coaching personnalisé. Nous partageons chaque jour la Parole de Dieu pour inspirer,
-        accompagner et fortifier ta foi.
-      </p>
-      <p>
-        Explore nos ressources, témoigne de ta transformation, ou demande un accompagnement spirituel adapté.
-      </p>
-      <a href="coaching.html" class="btn-primary">Demander un coaching spirituel</a>
-    </section>
-  </main>
-
-  <footer>
-    &copy; 2025 Coeur Ouvert — <a href="contact.html">Contact</a>
-  </footer>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      fetch("verses.json")
-        .then(response => {
-          if (!response.ok) {
-            throw new Error("Erreur lors du chargement du fichier JSON");
-          }
-          return response.json();
-        })
-        .then(data => {
-          let today = new Date();
-          let dayOfYear = Math.floor(
-            (today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24
-          );
-          let verseIndex = dayOfYear % data.length;
-          document.getElementById("daily-verse").textContent =
-            data[verseIndex].reference + " - " + data[verseIndex].texte;
-        })
-        .catch(error => {
-          console.error(error);
-          document.getElementById("daily-verse").textContent =
-            "Impossible de charger le verset du jour.";
-        });
-    });
-  </script>
-
-</body>
-</html>
+  <div id="daily-verse">Chargemen
