--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Coeur Ouvert</title>
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Nunito&display=swap" rel="stylesheet" />
+<!-- Google Fonts : Poppins -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
 <style>
   :root {
     --blue-main: #2a6ebb;
-    --gray-medium: #6b7c8a;
-    --gray-light: #f0f4f8;
+    --gray-medium: #444444;
     --accent-pastel: #a3c1d1;
     --gold-accent: #f5a623;
   }
@@ -18,9 +17,9 @@
     margin: 0; padding: 0; box-sizing: border-box;
   }
   body {
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Poppins', sans-serif;
     background: white;
-    color: var(--gray-medium);
+    color: #000000;
     line-height: 1.6;
   }
   header {
@@ -40,21 +39,21 @@
     height: 50px;
   }
   header h1 {
-    font-family: 'Montserrat', sans-serif;
-    color: var(--blue-main);
+    font-weight: 700;
     font-size: 2.8rem;
-    font-weight: 800;
+    color: #000000;
     letter-spacing: 2px;
   }
   header p.slogan {
     font-style: italic;
-    color: var(--accent-pastel);
+    color: #444444;
+    font-weight: 400;
     font-size: 1.1rem;
     margin-left: 10px;
   }
   nav {
     max-width: 900px;
-    margin: 0 auto 40px;
+    margin: 0 auto 30px;
     padding: 0 20px;
   }
   .menu {
@@ -66,7 +65,6 @@
   .menu li a {
     color: var(--blue-main);
     font-weight: 700;
-    font-family: 'Montserrat', sans-serif;
     font-size: 1.1em;
     text-decoration: none;
     transition: color 0.3s ease;
@@ -77,17 +75,15 @@
     outline: none;
   }
   #daily-verse {
+    max-width: 900px;
+    margin: 0 auto 40px;
+    padding: 10px 20px;
     font-style: italic;
     font-weight: 600;
-    font-size: 1.2rem;
-    background: var(--blue-main);
-    color: white;
-    padding: 20px 30px;
-    border-radius: 25px;
-    max-width: 700px;
-    margin: 0 auto 50px;
-    text-align: center;
-    box-shadow: 0 6px 15px rgba(42,110,187,0.3);
+    font-size: 1.1rem;
+    color: #000000;
+    border-left: 4px solid var(--blue-main);
+    background: #f9f9f9;
   }
   main {
     padding: 0 20px 60px;
@@ -95,24 +91,24 @@
     margin: 0 auto;
   }
   main section {
-    background: var(--gray-light);
+    background: #f7f7f7;
     padding: 40px 30px;
     border-radius: 15px;
-    box-shadow: 0 10px 30px rgba(42,110,187,0.1);
   }
   main h2 {
-    color: var(--blue-main);
-    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     font-size: 2.5rem;
     margin-bottom: 20px;
     text-align: center;
+    color: #000000;
   }
   main p {
+    font-weight: 400;
     font-size: 1.15rem;
-    color: var(--gray-medium);
     margin-bottom: 25px;
     line-height: 1.7;
     text-align: center;
+    color: #222222;
   }
   .btn-primary {
     display: block;
@@ -123,7 +119,6 @@
     font-weight: 700;
     padding: 15px 40px;
     border-radius: 30px;
-    font-family: 'Montserrat', sans-serif;
     font-size: 1.2rem;
     text-decoration: none;
     box-shadow: 0 6px 15px rgba(245,166,35,0.6);
@@ -135,7 +130,7 @@
   footer {
     text-align: center;
     padding: 20px 0;
-    color: var(--gray-medium);
+    color: #666666;
     font-size: 0.9rem;
   }
   footer a {
@@ -187,4 +182,52 @@
     </ul>
   </nav>
 
-  <div id="daily-verse">Chargemen
+  <div id="daily-verse">Chargement du verset...</div>
+
+  <main>
+    <section>
+      <h2>Notre mission</h2>
+      <p>
+        Coeur Ouvert est une plateforme chrétienne dédiée à l’encouragement spirituel 
+        et au coaching personnalisé. Nous partageons chaque jour la Parole de Dieu pour inspirer,
+        accompagner et fortifier ta foi.
+      </p>
+      <p>
+        Explore nos ressources, témoigne de ta transformation, ou demande un accompagnement spirituel adapté.
+      </p>
+      <a href="coaching.html" class="btn-primary">Demander un coaching spirituel</a>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 Coeur Ouvert — <a href="contact.html">Contact</a>
+  </footer>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      fetch("verses.json")
+        .then(response => {
+          if (!response.ok) {
+            throw new Error("Erreur lors du chargement du fichier JSON");
+          }
+          return response.json();
+        })
+        .then(data => {
+          let today = new Date();
+          let dayOfYear = Math.floor(
+            (today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24
+          );
+          let verseIndex = dayOfYear % data.length;
+          document.getElementById("daily-verse").textContent =
+            data[verseIndex].reference + " - " + data[verseIndex].texte;
+        })
+        .catch(error => {
+          console.error(error);
+          document.getElementById("daily-verse").textContent =
+            "Impossible de charger le verset du jour.";
+        });
+    });
+  </script>
+
+</body>
+</html>
