--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
 <style>
   :root {
-    --blue-main: #2a6ebb;
-    --gray-medium: #444444;
-    --accent-pastel: #a3c1d1;
     --gold-accent: #f5a623;
+    --gray-light: #f7f7f7;
   }
   * {
     margin: 0; padding: 0; box-sizing: border-box;
@@ -23,37 +21,30 @@
     line-height: 1.6;
   }
   header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     max-width: 900px;
-    margin: 20px auto 10px;
+    margin: 20px auto 30px;
     padding: 0 20px;
-  }
-  header .branding {
-    display: flex;
-    align-items: center;
-    gap: 15px;
+    text-align: center;
   }
   header img.logo {
-    height: 50px;
+    height: 60px;
+    margin-bottom: 10px;
   }
   header h1 {
     font-weight: 700;
-    font-size: 2.8rem;
-    color: #000000;
+    font-size: 3rem;
     letter-spacing: 2px;
+    margin-bottom: 5px;
   }
   header p.slogan {
     font-style: italic;
-    color: #444444;
     font-weight: 400;
-    font-size: 1.1rem;
-    margin-left: 10px;
+    font-size: 1.2rem;
+    color: #444444;
   }
   nav {
     max-width: 900px;
-    margin: 0 auto 30px;
+    margin: 0 auto 40px;
     padding: 0 20px;
   }
   .menu {
@@ -63,7 +54,7 @@
     gap: 40px;
   }
   .menu li a {
-    color: var(--blue-main);
+    color: #000000;
     font-weight: 700;
     font-size: 1.1em;
     text-decoration: none;
@@ -76,44 +67,51 @@
   }
   #daily-verse {
     max-width: 900px;
-    margin: 0 auto 40px;
+    margin: 0 auto 50px;
     padding: 10px 20px;
     font-style: italic;
     font-weight: 600;
     font-size: 1.1rem;
     color: #000000;
-    border-left: 4px solid var(--blue-main);
+    border-left: 4px solid #2a6ebb;
     background: #f9f9f9;
   }
   main {
-    padding: 0 20px 60px;
     max-width: 900px;
     margin: 0 auto;
+    padding: 0 20px 60px;
   }
-  main section {
-    background: #f7f7f7;
-    padding: 40px 30px;
+  .section-block {
+    background: var(--gray-light);
     border-radius: 15px;
-  }
-  main h2 {
-    font-weight: 700;
-    font-size: 2.5rem;
-    margin-bottom: 20px;
+    padding: 30px 20px;
+    margin-bottom: 40px;
     text-align: center;
+    box-shadow: 0 6px 15px rgb(0 0 0 / 0.05);
+  }
+  .section-block h2 {
+    font-weight: 700;
+    font-size: 2.3rem;
+    margin-bottom: 20px;
     color: #000000;
   }
-  main p {
+  .section-block p {
     font-weight: 400;
     font-size: 1.15rem;
-    margin-bottom: 25px;
-    line-height: 1.7;
-    text-align: center;
     color: #222222;
+    max-width: 650px;
+    margin: 0 auto 25px;
+    line-height: 1.7;
+  }
+  .section-block img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 12px;
+    margin-bottom: 25px;
+    box-shadow: 0 8px 20px rgb(0 0 0 / 0.08);
   }
   .btn-primary {
-    display: block;
-    width: fit-content;
-    margin: 0 auto;
+    display: inline-block;
     background-color: var(--gold-accent);
     color: white;
     font-weight: 700;
@@ -134,7 +132,7 @@
     font-size: 0.9rem;
   }
   footer a {
-    color: var(--blue-main);
+    color: #2a6ebb;
     text-decoration: none;
   }
   footer a:hover {
@@ -142,17 +140,20 @@
   }
   @media (max-width: 480px) {
     header h1 {
-      font-size: 2rem;
+      font-size: 2.2rem;
     }
     header p.slogan {
       font-size: 1rem;
-      margin-left: 5px;
     }
-    main h2 {
+    main {
+      padding: 0 15px 40px;
+    }
+    .section-block h2 {
       font-size: 1.8rem;
     }
-    main p {
+    .section-block p {
       font-size: 1rem;
+      max-width: 100%;
     }
     .btn-primary {
       font-size: 1rem;
@@ -164,13 +165,9 @@
 <body>
 
   <header>
-    <div class="branding">
-      <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
-      <div>
-        <h1>Coeur Ouvert</h1>
-        <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
-      </div>
-    </div>
+    <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
+    <h1>Coeur Ouvert</h1>
+    <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
   </header>
 
   <nav>
@@ -185,17 +182,32 @@
   <div id="daily-verse">Chargement du verset...</div>
 
   <main>
-    <section>
+    <section class="section-block">
+      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80" alt="Notre mission" />
       <h2>Notre mission</h2>
       <p>
         Coeur Ouvert est une plateforme chrétienne dédiée à l’encouragement spirituel 
         et au coaching personnalisé. Nous partageons chaque jour la Parole de Dieu pour inspirer,
         accompagner et fortifier ta foi.
       </p>
+    </section>
+
+    <section class="section-block">
+      <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=800&q=80" alt="Comme Dieu te voit" />
+      <h2>Comme Dieu te voit</h2>
       <p>
-        Explore nos ressources, témoigne de ta transformation, ou demande un accompagnement spirituel adapté.
+        Tu es précieux aux yeux de Dieu, créé avec amour et destiné à accomplir de grandes choses. 
+        Ne doute jamais de ta valeur, car elle est infinie et inaltérable.
       </p>
-      <a href="coaching.html" class="btn-primary">Demander un coaching spirituel</a>
+    </section>
+
+    <section class="section-block">
+      <img src="https://images.unsplash.com/photo-1465311443244-3f4ef331f62a?auto=format&fit=crop&w=800&q=80" alt="Vivre avec gratitude" />
+      <h2>Vivre avec gratitude</h2>
+      <p>
+        La gratitude transforme notre regard sur la vie, elle ouvre le cœur à la joie et à la paix. 
+        Chaque jour est une nouvelle occasion de remercier pour les bénédictions, grandes ou petites.
+      </p>
     </section>
   </main>
 
